--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 ---
 layout: default
-title: "Home"
+title: "About me"
 ---
 
-{% if site.show_excerpts %}
-  {% include home.html %}
-{% else %}
-  {% include archive.html title="Posts" %}
-{% endif %}
+I am a PhD student at the University of Queensland, affiliated with [EQUS](https://equs.org/users/evan-gale). I study theoretical physics,
+with interests in relativistic quantum mechanics, quantum field theory and the foundations of physics.
+Currently, I am studying problems with localisation in the atom-light interaction and Unruh-DeWitt detector model. More specifically,
+I am looking at the physical consequences of the localisation scheme employed by modelling the atom-detector's quantised centre of mass,
+corresponding to different definitions of the associated position operator.
+Additionally, I am also currently investigating the properties of a novel class minimum uncertainty states,
+which minimise the uncertainty between the position-velocity quadratures rather than the usual position-momentum quadratures in phase space.
