--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+---
+title: ""
+layout: default
+sitemap: false
+---
+
 <html>
   <head>
     <meta http-equiv="Refresh" content="0; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
   </head>
-  <body>
-    <p>You will be redirected to w3docs.com soon!</p>
-  </body>
 </html>
