--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -4,6 +4,8 @@ layout: default
 sitemap: false
 ---
 
+{% include neutrino-wp-presentation.html %}
+
 <html>
   <head>
     <meta http-equiv="Refresh" content="0; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
