--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -8,6 +8,9 @@ sitemap: false
 
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
+    <meta http-equiv="Refresh" content="2; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
   </head>
+  <body>
+     <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://thatevangale.github.io/presentations/neutrino-wavepackets">here</a> to be redirected.</p>
+   </body>
 </html>
