--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -1,13 +1,10 @@
 ---
+permalink: "/neutrino-wp-presentation/"
 title: ""
 layout: default
 sitemap: false
 ---
 
-{% include neutrino-wp-presentation.html %}
-
 <article>
   <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://thatevangale.github.io/presentations/neutrino-wavepackets">here</a> to be redirected.</p>
 </article>
-
-
