--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -1,9 +1,13 @@
 ---
-permalink: /neutrino-wp-presentation.html
 title: ""
 layout: default
+sitemap: false
 ---
 
-<article>
-  <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://thatevangale.github.io/presentations/neutrino-wavepackets">here</a> to be redirected.</p>
-</article>
+{% include neutrino-wp-presentation.html %}
+
+<html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
+  </head>
+</html>
