--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -4,10 +4,11 @@ layout: default
 sitemap: false
 ---
 
-{% include neutrino-wp-presentation.html %}
-
 <html>
   <head>
     <meta http-equiv="Refresh" content="0; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
   </head>
+  <article>
+    <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://thatevangale.github.io/presentations/neutrino-wavepackets">here</a>.</p>
+  </article>
 </html>
