--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -6,6 +6,6 @@ sitemap: false
 
 <html>
   <article>
-    <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://thatevangale.github.io/presentations/neutrino-wavepackets">here</a>.</p>
+    <p>This page has been moved. If you are not redirected within 3 seconds, click .</p>
   </article>
 </html>
