--- a/neutrino-wp-presentation.html
+++ b/neutrino-wp-presentation.html
@@ -5,7 +5,10 @@ sitemap: false
 ---
 
 <html>
+  <head>
+    <meta http-equiv="Refresh" content="0; url='https://thatevangale.github.io/presentations/neutrino-wavepackets'" />
+  </head>
   <article>
-    <p>This page has been moved. If you are not redirected within 3 seconds, click .</p>
+    <p>This page has been moved. If you are not redirected within 3 seconds, click <a href="https://thatevangale.github.io/presentations/neutrino-wavepackets">here</a>.</p>
   </article>
 </html>
